# gambitdb

./: .gitignore  AUTHORS  Dockerfile  README.md  env.yaml  mkdocs.yml  process_fungi.sh  pyproject.toml  run_gambitdb.sh  run_legionella.sh  run_tests.sh  setup.py
.github/workflows/: ci.yml
docs/reference/: gambitdb.md  setup.md
gambitdb/: BulkNCBIGenomeDownloader.py  CompressClusters.py  Curate.py  DatabaseRecall.py  Diameters.py  FilterFastq.py  Fungi.py  FungiAnalyze.py  GambitDb.py  GtdbSpeciesCorrecter.py  GtdbSpreadsheetParser.py  GtdbTestset.py  NCBIDatasets.py  PairwiseTable.py  SplitSpecies.py
gambitdb/tests/: CompressClusters_test.py  Curate_test.py  Diameters_test.py  FungiParser_test.py  GambitDb_test.py  GtdbSpreadsheetParser_test.py  PairwiseTable_test.py  SplitSpecies_test.py  filter_fastq_test.py  random_data.py
gambitdb/tests/data/compress_clusters/: representative_genomes.csv
gambitdb/tests/data/curate/: assembly_metadata.csv  ec_genome_assembly  ec_gtdb_genome_assembly_metadata.csv  ec_gtdb_species.csv  ec_pairwise  ec_species  pairwise.csv  species.csv  species_to_remove
gambitdb/tests/data/diameters/: assembly_metadata.csv  expected_output_min_inter.csv  expected_output_species.csv  genome_accessions.csv  pairwise_dist.csv  species.csv  species_no_genomes.csv
gambitdb/tests/data/filter_fastq/: test_expected_output_kmers.fa
gambitdb/tests/data/gambitdb/: assembly_metadata.csv  pw-dists.csv  signatures.h5  species.csv  species_taxon_output.csv  species_taxon_output_curated.csv
gambitdb/tests/data/gtdb_spreadsheet_parser/: bac120_metadata_r214  expected_accession  expected_genome_assembly_metadata.csv  expected_species_taxon.csv  output_accessions_to_download.csv  output_genome_metadata.csv  output_representative_genomes.csv  output_species.csv  representative_genomes.csv
gambitdb/tests/data/test_dataset/: sample1.fa  (+8 more)
scripts/: gambit-apply-patch  gambit-create  gambit-filter-fastq  gambit-merge-signatures  gambit-remove-genome-signatures  gambitdb  gambitdb-add-shigella-db  gambitdb-apply-patch  gambitdb-compare-gtdb-metadata  gambitdb-compress  gambitdb-compress-clusters  gambitdb-convert-distance-matrix  gambitdb-create  gambitdb-curate  gambitdb-database-recall  gambitdb-diameters  gambitdb-fungi  gambitdb-fungi-analyze  gambitdb-fungi-fix-genera  gambitdb-gtdb  gambitdb-gtdb-corrector  gambitdb-gtdb-testset  gambitdb-insert-patch  gambitdb-iterative-build  gambitdb-manual-curation  gambitdb-merge-duplicates  gambitdb-merge-signatures  gambitdb-ncbi-bulk-downloader  gambitdb-pairwise-table  gambitdb-random-testing-data  gambitdb-rebuild-signatures  gambitdb-remove-genome-signatures  gambitdb-repair-db  gambitdb-sync-signatures-db  gambitdb-transfer-db  gambitdb-update-taxa-report  gambitdb_random_testing_data  run_gambitdb_archaea.sh  run_gambitdb_bacteria.sh  run_gambitdb_fungi.sh
test_data/: assembly_metadata.csv  bac120_metadata_r226_example.tsv  matrix.idx  ncbi_whitelist.txt  species_taxa.csv
(+14 files in other folders)
