[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gambitdb"
dynamic = ["version"]
description = "gambitdb: a database of bacterial classification"
readme = "README.md"
authors = [
    {name = "Andrew J. Page", email = "andrew.page@theiagen.com"},
    {name = "Michal Babinski", email = "michal.babinski@example.com"}
]
license = {text = "GPL-3.0-only"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
requires-python = ">=3.7"
dependencies = [
    "biopython>=1.68",
    "pandas",
    "numpy",
    "tqdm",
    "h5py",
    "networkx",
    "psutil",
]

[project.optional-dependencies]
test = [
    "nose>=1.3",
]

[project.urls]
Homepage = "https://github.com/gambit-suite/gambitdb"
Repository = "https://github.com/gambit-suite/gambitdb"

[tool.setuptools.packages.find]
where = ["."]
include = ["gambitdb*"]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E741",   # ambiguous variable name
    "B905",   # zip without strict
    "SIM108", # ternary operator
]

[tool.ruff.lint.per-file-ignores]
"gambitdb/tests/*" = ["B", "SIM"]
"scripts/*" = ["E", "F", "B", "SIM", "UP"]
